--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "api": "json-server ./src/services/server.json -H 192.168.0.104 -p 3333 -d 700"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.0",
