--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
+    "react-native-toast-notifications": "^3.2.3",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
